--- a/examples/examples/grav/Gravity_Gradiometry_Inversion_PGI.ipynb
+++ b/examples/examples/grav/Gravity_Gradiometry_Inversion_PGI.ipynb
@@ -16,6 +16,13 @@
   },
   {
    "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Import Modules"
