Add CSIC example

--- a/_downloads/4b511070d48395a0f9f67690590ca84d/04_model_spremberg_building.ipynb
+++ b/_downloads/4b511070d48395a0f9f67690590ca84d/04_model_spremberg_building.ipynb
@@ -15,7 +15,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "\n# Construct Spremberg: Building initial model\n\nThis example demonstrates...\n"
+        "\n# Construct Spremberg: Building initial model\n\nThis example demonstrates...\n\n# sphinx_gallery_thumbnail_number = -1\n"
       ]
     },
     {
@@ -26,7 +26,7 @@
       },
       "outputs": [],
       "source": [
-        "# sphinx_gallery_thumbnail_number = -2\nimport numpy as np\n\nimport gempy as gp\nimport gempy_viewer as gpv\nfrom subsurface.modules.visualization import to_pyvista_line, to_pyvista_points\nfrom vector_geology.model_contructor.spremberg import generate_spremberg_model, get_spremberg_borehole_set, add_wells_plot"
+        "import numpy as np\n\nimport gempy as gp\nimport gempy_viewer as gpv\nfrom subsurface.modules.visualization import to_pyvista_line, to_pyvista_points\nfrom vector_geology.model_contructor.spremberg import generate_spremberg_model, get_spremberg_borehole_set, add_wells_plot"
       ]
     },
     {
@@ -99,7 +99,7 @@
       },
       "outputs": [],
       "source": [
-        "# * Ignore curvature for now\ngeo_model.interpolation_options.kernel_options.range = 3\ngeo_model.interpolation_options.compute_scalar_gradient = False\ngeo_model.interpolation_options.evaluation_options.curvature_threshold = 0.4\ngeo_model.interpolation_options.evaluation_options.number_octree_levels_surface = 5\n\ngeo_model.interpolation_options.evaluation_options.error_threshold = 1\ngeo_model.interpolation_options.evaluation_options.verbose = True\n\n\ngp.compute_model(\n    gempy_model=geo_model,\n    engine_config=gp.data.GemPyEngineConfig(\n        backend=gp.data.AvailableBackends.PYTORCH,\n        dtype=\"float64\",\n    )\n)"
+        "# * Ignore curvature for now\ngeo_model.interpolation_options.kernel_options.range = 3\ngeo_model.interpolation_options.compute_scalar_gradient = False\ngeo_model.interpolation_options.evaluation_options.octree_curvature_threshold = 0.4\ngeo_model.interpolation_options.evaluation_options.number_octree_levels_surface = 5\n\ngeo_model.interpolation_options.evaluation_options.octree_error_threshold = 1\ngeo_model.interpolation_options.evaluation_options.verbose = True\n\n\ngp.compute_model(\n    gempy_model=geo_model,\n    engine_config=gp.data.GemPyEngineConfig(\n        backend=gp.data.AvailableBackends.PYTORCH,\n        dtype=\"float64\",\n    )\n)"
       ]
     },
     {
@@ -139,7 +139,7 @@
       },
       "outputs": [],
       "source": [
-        "# # %%\nif True:\n    link = gpv.plot_to_liquid_earth(\n        geo_model=geo_model,\n        space_name=\"Spremberg\",\n        file_name=\"gempy_model\",\n        user_token=None,  # If None, it will try to grab it from the environment\n        grab_link=True,\n    )\n\n    print(f\"Generated Link: {link}\")"
+        "# # %%\nif False:\n    link = gpv.plot_to_liquid_earth(\n        geo_model=geo_model,\n        space_name=\"Spremberg\",\n        file_name=\"gempy_model\",\n        user_token=None,  # If None, it will try to grab it from the environment\n        grab_link=True,\n    )\n\n    print(f\"Generated Link: {link}\")"
       ]
     }
   ],
