--- a/_downloads/71916b46938f22a9c23a758261bcd310/03_model_spremberg_import.ipynb
+++ b/_downloads/71916b46938f22a9c23a758261bcd310/03_model_spremberg_import.ipynb
@@ -87,7 +87,7 @@
       },
       "outputs": [],
       "source": [
-        "survey: Survey = Survey.from_df(df)\nsurvey.update_survey_with_lith(lith)"
+        "survey: Survey = Survey.from_df(\n    survey_df=df,\n    attr_df=None\n)\nsurvey.update_survey_with_lith(lith)"
       ]
     },
     {
@@ -141,7 +141,7 @@
       },
       "outputs": [],
       "source": [
-        "well_mesh = to_pyvista_line(\n    line_set=borehole_set.combined_trajectory,\n    active_scalar=\"lith_ids\",\n    radius=10\n)\n\ncollars = to_pyvista_points(\n    borehole_set.collars.collar_loc,\n)\n\n# Initialize the PyVista plotter.\npyvista_plotter = init_plotter()\n\n# Define the units limit for thresholding the well mesh.\nunits_limit = [0, 20]\n\n# Add the well mesh and collars to the plotter and display.\npyvista_plotter.add_mesh(\n    well_mesh.threshold(units_limit),\n    cmap=\"tab20c\",\n    clim=units_limit\n)\n\npyvista_plotter.add_mesh(\n    collars,\n    point_size=10,\n    render_points_as_spheres=True\n)\n\npyvista_plotter.show()"
+        "well_mesh = to_pyvista_line(\n    line_set=borehole_set.combined_trajectory,\n    active_scalar=\"lith_ids\",\n    radius=10\n)\n\ncollars = to_pyvista_points(borehole_set.collars.collar_loc)\n\n# Initialize the PyVista plotter.\npyvista_plotter = init_plotter()\n\n# Define the units limit for thresholding the well mesh.\nunits_limit = [0, 20]\n\n# Add the well mesh and collars to the plotter and display.\npyvista_plotter.add_mesh(\n    well_mesh.threshold(units_limit),\n    cmap=\"tab20c\",\n    clim=units_limit\n)\n\npyvista_plotter.add_mesh(\n    collars,\n    point_size=10,\n    render_points_as_spheres=True\n)\n\npyvista_plotter.show()"
       ]
     },
     {
